--- a/P3/practicasDjango/proyectoUTDdjango/mainapp/templates/layouts/layouts.html
+++ b/P3/practicasDjango/proyectoUTDdjango/mainapp/templates/layouts/layouts.html
@@ -7,7 +7,7 @@
     <title>
         {% block title %}{% endblock title %}|Django Proyecto UTD
     </title>
-    <link rel="stylesheet" href="{% static "css/estilos.css" %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'css/estilos.css' %}" type="text/css">
 </head>
 <body>
     <header>
