--- a/P3/practicasDjango/proyectoUTDdjango/mainapp/templates/mainapp/404.html
+++ b/P3/practicasDjango/proyectoUTDdjango/mainapp/templates/mainapp/404.html
@@ -1,3 +1,9 @@
+{% extends 'layouts/layouts.html' %}
+
+{% block title %}
+    Error 404
+{% endblock title %}
+
 {% block content %}
     <script>
         alert('Esta página no existe');
